force-app/main/default/objects/Vagas_Dispon_veis__c/Vagas_Dispon_veis__c.object-meta.xml
<CustomObject>
    <label>Vaga Disponível</label>
    <nameField>
        <displayFormat>V{0}</displayFormat>
        <label>Vaga Disponível</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vagas Disponíveis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>