force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Cargo_Ofertado__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Ofertado__c</fullName>
    <label>Cargo Ofertado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>