force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Cargos__c.field-meta.xml
<CustomField>
    <fullName>Cargos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O cargo não existe ou não foi aprovado.</errorMessage>
        <filterItems>
            <field>Cargo__c.Vigencia__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>Vagas Disponíveis</relationshipLabel>
    <relationshipName>Vagas_Dispon_veis</relationshipName>
    <type>Lookup</type>
</CustomField>