force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preencher quando o Motivo da Contratação for substituição</inlineHelpText>
    <label>Colaborador Substituído</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0015A00002GC6r6QAD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vagas Disponíveis</relationshipLabel>
    <relationshipName>Vagas_Dispon_veis</relationshipName>
    <type>Lookup</type>
</CustomField>