force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Data_de_finaliza_o__c.field-meta.xml
<CustomField>
    <fullName>Data_de_finaliza_o__c</fullName>
    <label>Data de finalização</label>
    <type>DateTime</type>
</CustomField>