force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Empresa__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Administrativo</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Cozinha</fullName>
            </value>
            <value>
                <fullName>Custos Serviços</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Estoque</fullName>
            </value>
            <value>
                <fullName>Limpeza</fullName>
            </value>
            <value>
                <fullName>Locação</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Supervisão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>