force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Descri_o_do_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_do_Cargo__c</fullName>
    <label>Descrição do Cargo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>