force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Dirigir_carros_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Dirigir_carros_da_empresa__c</fullName>
    <label>Dirigirá carros da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Empresa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>