force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Hospcom</fullName>
            </value>
            <value>
                <fullName>IZU</fullName>
            </value>
            <value>
                <fullName>Gestcom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>