force-app/main/default/objects/Vagas_Dispon_veis__c/fields/EquipamentosSolicitados__c.field-meta.xml
<CustomField>
    <fullName>EquipamentosSolicitados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EquipamentosSolicitados</label>
    <type>Checkbox</type>
</CustomField>