force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Espelhar_Permiss_es_SalesForce__c.field-meta.xml
<CustomField>
    <fullName>Espelhar_Permiss_es_SalesForce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Escolha um funcionário para que se espelhe todas as permissões nescessárias para criação da conta SalesForce</inlineHelpText>
    <label>Espelhar Permissões SalesForce</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vagas_Dispon_veis3</relationshipName>
    <type>Lookup</type>
</CustomField>