force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Experi_ncia_Pr_via_Exigida__c.field-meta.xml
<CustomField>
    <fullName>Experi_ncia_Pr_via_Exigida__c</fullName>
    <label>Experiência Prévia Exigida</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>