force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Final_Assinatura_de_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Final_Assinatura_de_Documentos__c</fullName>
    <label>Final - Assinatura de Documentos</label>
    <type>DateTime</type>
</CustomField>