force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Final_Entrevista_com_RH__c.field-meta.xml
<CustomField>
    <fullName>Final_Entrevista_com_RH__c</fullName>
    <label>Final - Entrevista com RH</label>
    <type>DateTime</type>
</CustomField>