force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Final_Processo_Admissional__c.field-meta.xml
<CustomField>
    <fullName>Final_Processo_Admissional__c</fullName>
    <label>Final - Processo Admissional</label>
    <type>DateTime</type>
</CustomField>