force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Folga_Semanal__c.field-meta.xml
<CustomField>
    <fullName>Folga_Semanal__c</fullName>
    <label>Folga Semanal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domingo</fullName>
            </value>
            <value>
                <fullName>Segunda-feira</fullName>
            </value>
            <value>
                <fullName>Terça-feira</fullName>
            </value>
            <value>
                <fullName>Quarta-feira</fullName>
            </value>
            <value>
                <fullName>Quinta-feira</fullName>
            </value>
            <value>
                <fullName>Sexta-feira</fullName>
            </value>
            <value>
                <fullName>Sábado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>