force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Hor_rio_de_Trabalho__c.field-meta.xml
<CustomField>
    <fullName>Hor_rio_de_Trabalho__c</fullName>
    <inlineHelpText>Exemplo: Segunda a Sexta - 08:00 às 12:00 e 13:15 às 18:00</inlineHelpText>
    <label>Horário de Trabalho</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Empresa__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>08h –18h Seg. a Sex</fullName>
            </value>
            <value>
                <fullName>16h as 00:20h todos os dias (com uma folga semanal)</fullName>
            </value>
            <value>
                <fullName>08h as 16h20min</fullName>
            </value>
            <value>
                <fullName>15h as 23h</fullName>
            </value>
            <value>
                <fullName>12x36</fullName>
            </value>
            <value>
                <fullName>6x1 intercalado- 12h as 15h, intervalo, 19h as 23:20</fullName>
            </value>
            <value>
                <fullName>Jornada de 4h/dia - Estagio</fullName>
            </value>
            <value>
                <fullName>Jornada de 5h/dia - Estágio</fullName>
            </value>
            <value>
                <fullName>Jornada de 6h/dia - Estágio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>