force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Inicio_Aguardando_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Aguardando_aprova_o__c</fullName>
    <label>Início - Aguardando aprovação</label>
    <type>DateTime</type>
</CustomField>