force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Inicio_Entrevista_com_Gestor__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Entrevista_com_Gestor__c</fullName>
    <label>Início - Entrevista com Gestor</label>
    <type>DateTime</type>
</CustomField>