force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Inicio_Entrevista_com_RH__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Entrevista_com_RH__c</fullName>
    <label>Início - Entrevista com RH</label>
    <type>DateTime</type>
</CustomField>