force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Local_de_Atua_o__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Atua_o__c</fullName>
    <label>Local de Atuação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Empresa__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Belém</fullName>
            </value>
            <value>
                <fullName>Brasília</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Colômbia</fullName>
            </value>
            <value>
                <fullName>Cuiabá</fullName>
            </value>
            <value>
                <fullName>Delivery Taguatinga</fullName>
            </value>
            <value>
                <fullName>Eldorado</fullName>
            </value>
            <value>
                <fullName>Espírito Santo</fullName>
            </value>
            <value>
                <fullName>Estados Unidos</fullName>
            </value>
            <value>
                <fullName>Goiânia</fullName>
            </value>
            <value>
                <fullName>Jardim Goiás</fullName>
            </value>
            <value>
                <fullName>Jardim Goiás Delivery</fullName>
            </value>
            <value>
                <fullName>Manaus</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Palmas</fullName>
            </value>
            <value>
                <fullName>Paraná</fullName>
            </value>
            <value>
                <fullName>Região de São Paulo</fullName>
            </value>
            <value>
                <fullName>Região Nordeste</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Sul</fullName>
            </value>
            <value>
                <fullName>Rondônia</fullName>
            </value>
            <value>
                <fullName>Roraima</fullName>
            </value>
            <value>
                <fullName>Santa Catarina</fullName>
            </value>
            <value>
                <fullName>Setor Oeste</fullName>
            </value>
            <value>
                <fullName>Setor Oeste Cozinha Industrial</fullName>
            </value>
            <value>
                <fullName>Setor Oeste Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>