force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Motivo_da_Contratacao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Contratacao__c</fullName>
    <label>Motivo da Contratação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Substituição</fullName>
            </value>
            <value>
                <fullName>Aumento de Quadro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>