force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Necessita_Celular__c.field-meta.xml
<CustomField>
    <fullName>Necessita_Celular__c</fullName>
    <label>Necessita Celular</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Empresa__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>