force-app/main/default/objects/Vagas_Dispon_veis__c/fields/PerfilDesejado__c.field-meta.xml
<CustomField>
    <fullName>PerfilDesejado__c</fullName>
    <label>Perfil Comportamental Desejado</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>