force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Periodo_Aguardando_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Aguardando_aprova_o__c</fullName>
    <formula>IF(
ISBLANK(Final_Aguardando_aprova_o__c ) || ISBLANK( Inicio_Aguardando_aprova_o__c  ),
null,
IF(
(Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c) &gt;= 1,
TEXT(FLOOR(Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c)) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Aguardando_aprova_o__c  - Inicio_Aguardando_aprova_o__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c) * 24 &gt;= 1,
TEXT(FLOOR((Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((Final_Aguardando_aprova_o__c - Inicio_Aguardando_aprova_o__c ) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período - Aguardando aprovação</label>
    <type>Text</type>
</CustomField>