force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Periodo_Entrevista_com_Gestor__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Entrevista_com_Gestor__c</fullName>
    <formula>IF(
ISBLANK(Final_Entrevista_com_Gestor__c) || ISBLANK( Inicio_Entrevista_com_Gestor__c),
null,
IF(
(Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c  ) &gt;= 1,
TEXT(FLOOR(Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c  )) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c  ) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c  ) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c) * 24 &gt;= 1,
TEXT(FLOOR((Final_Entrevista_com_Gestor__c  - Inicio_Entrevista_com_Gestor__c) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Entrevista_com_Gestor__c - Inicio_Entrevista_com_Gestor__c ) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((Final_Entrevista_com_Gestor__c  - Inicio_Entrevista_com_Gestor__c ) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período - Entrevista com Gestor</label>
    <type>Text</type>
</CustomField>