force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Periodo_Proposta_e_ASO__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Proposta_e_ASO__c</fullName>
    <formula>IF(
ISBLANK(Final_Proposta_e_ASO__c ) || ISBLANK( Inicio_Proposta_e_ASO__c),
null,
IF(
(Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) &gt;= 1,
TEXT(FLOOR(Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c)) &amp; &quot; dia(s) e &quot; &amp;
TEXT(FLOOR(MOD((Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 24, 24))) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
IF(
(Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 24 &gt;= 1,
TEXT(FLOOR((Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 24)) &amp; &quot;:&quot; &amp;
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 60, 60))), 2) &amp; &quot; horas&quot;,
TEXT(FLOOR((Final_Proposta_e_ASO__c - Inicio_Proposta_e_ASO__c) * 24 * 60)) &amp; &quot; minutos&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Período - Proposta e ASO</label>
    <type>Text</type>
</CustomField>