force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Quantidade_de_vagas__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_vagas__c</fullName>
    <label>Quantidade de vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>