force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Recrutador__c.field-meta.xml
<CustomField>
    <fullName>Recrutador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recrutador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vagas_Dispon_veis2</relationshipName>
    <type>Lookup</type>
</CustomField>