force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Recrutador_nome__c.field-meta.xml
<CustomField>
    <fullName>Recrutador_nome__c</fullName>
    <formula>Recrutador__r.FirstName + &apos; &apos; + Recrutador__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recrutador (nome)</label>
    <type>Text</type>
</CustomField>