force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Sal_rio__c.field-meta.xml
<CustomField>
    <fullName>Sal_rio__c</fullName>
    <label>Salário</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>