force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando aprovação</fullName>
                <default>true</default>
                <label>Aguardando aprovação</label>
            </value>
            <value>
                <fullName>Divulgação da Vaga</fullName>
            </value>
            <value>
                <fullName>Triagem de Candidatos</fullName>
            </value>
            <value>
                <fullName>Entrevista com RH</fullName>
            </value>
            <value>
                <fullName>Entrevista com Gestor</fullName>
            </value>
            <value>
                <fullName>Proposta e ASO</fullName>
            </value>
            <value>
                <fullName>Processo Admissional</fullName>
            </value>
            <value>
                <fullName>Assinatura de Documentos</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Análise de Entrevistas</fullName>
                <isActive>false</isActive>
                <label>Análise de Entrevistas</label>
            </value>
            <value>
                <fullName>Período de Contratação</fullName>
                <isActive>false</isActive>
                <label>Período de Contratação</label>
            </value>
            <value>
                <fullName>Período de Entrevistas</fullName>
                <isActive>false</isActive>
                <label>Período de Entrevistas</label>
            </value>
            <value>
                <fullName>Seleção para Entrevistas</fullName>
                <isActive>false</isActive>
                <label>Seleção para Entrevistas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>