force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Tempo_de_admiss_o__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_admiss_o__c</fullName>
    <formula>TEXT(Data_de_admiss_o__c - DATEVALUE(CreatedDate)) &amp; &quot; dias&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de admissão</label>
    <type>Text</type>
</CustomField>