force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Tempo_de_fechamento_RH__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_fechamento_RH__c</fullName>
    <formula>DATEVALUE(Inicio_Processo_Admissional__c) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de fechamento RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>