force-app/main/default/objects/Vagas_Dispon_veis__c/fields/V_nculo__c.field-meta.xml
<CustomField>
    <fullName>V_nculo__c</fullName>
    <label>Vínculo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
            <value>
                <fullName>Estágio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>