force-app/main/default/objects/Vagas_Dispon_veis__c/fields/Vaga_Confidencial__c.field-meta.xml
<CustomField>
    <fullName>Vaga_Confidencial__c</fullName>
    <label>Vaga Confidencial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>