force-app/main/default/objects/Vagas_Dispon_veis__c/validationRules/Cargo.validationRule-meta.xml
<ValidationRule>
    <fullName>Cargo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Cargo2__c, &quot;&quot;))
)</errorConditionFormula>
    <errorDisplayField>Cargo2__c</errorDisplayField>
    <errorMessage>Este campo não está mais disponível.
Use o campo &apos;Cargos&apos; abaixo.</errorMessage>
</ValidationRule>