force-app/main/default/objects/Vagas_Dispon_veis__c/validationRules/Usuario_SAP.validationRule-meta.xml
<ValidationRule>
    <fullName>Usuario_SAP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Existe_licenca_adquirida__c ) = &apos;Sim&apos;,
Usuario_e_senha_SAP__c = &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Usuario_e_senha_SAP__c</errorDisplayField>
    <errorMessage>Informe o usuário e senha do SAP.</errorMessage>
</ValidationRule>