force-app/main/default/objects/Vagas_Dispon_veis__c/validationRules/Validar_Contato_Substituicao.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Contato_Substituicao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISPICKVAL(Motivo_da_Contratacao__c, &quot;Substituição&quot;),
    ISBLANK(Contato__c)
)</errorConditionFormula>
    <errorMessage>O campo Contato deve ser preenchido quando o Motivo da Contratação for &quot;Substituição&quot;</errorMessage>
</ValidationRule>