force-app/main/default/objects/Vagas_Dispon_veis__c/listViews/HOSPCOM.listView-meta.xml
<ListView>
    <fullName>HOSPCOM</fullName>
    <columns>NAME</columns>
    <columns>CargoFormula__c</columns>
    <columns>Empresa__c</columns>
    <columns>Departamento__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>equals</operation>
        <value>ABC,GDB,Health,Hospcom,Gestcom</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Finalizada</value>
    </filters>
    <label>Vagas Disponíveis HOSPCOM</label>
</ListView>