force-app/main/default/objects/Vagas_Dispon_veis__c/listViews/Vagas_Canceladas.listView-meta.xml
<ListView>
    <fullName>Vagas_Canceladas</fullName>
    <columns>NAME</columns>
    <columns>CargoFormula__c</columns>
    <columns>Data_de_admiss_o__c</columns>
    <columns>Empresa__c</columns>
    <columns>Departamento__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelada</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2022 12:00 AM</value>
    </filters>
    <label>Vagas Canceladas</label>
</ListView>