force-app/main/default/objects/Vagas_Dispon_veis__c/listViews/Vagas_Dispon_veis_IZU.listView-meta.xml
<ListView>
    <fullName>Vagas_Dispon_veis_IZU</fullName>
    <columns>NAME</columns>
    <columns>Cargo_Ofertado__c</columns>
    <columns>Empresa__c</columns>
    <columns>Departamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Empresa__c</field>
        <operation>equals</operation>
        <value>IZU</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Finalizada</value>
    </filters>
    <label>Vagas Disponíveis IZU</label>
</ListView>