force-app/main/default/objects/Vagas_Dispon_veis__c/listViews/Vagas_Finalizadas.listView-meta.xml
<ListView>
    <fullName>Vagas_Finalizadas</fullName>
    <columns>NAME</columns>
    <columns>Cargo_Ofertado__c</columns>
    <columns>Quantidade_de_vagas__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Etapa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalizada</value>
    </filters>
    <label>Vagas Finalizadas</label>
</ListView>